# Celebal-assignments

./: .gitignore  LICENSE  README.md  Week5_SambhavaJain.ipynb  conftest.py  pyproject.toml  requirements.txt  week1_SambhavaJain.ipynb  week2_SambhavaJain.ipynb  week3-sambhavajain.ipynb  week4_SambhavaJain.ipynb  week5_SambhavaJain.ipynb  week6_SambhavaJain.ipynb  week8_SambhavaJain.ipynb
copilot/: __init__.py  __main__.py  cli.py  errors.py
copilot/codegen/: __init__.py  cheatsheet.py  generate.py  prompt.py  sanitize.py
copilot/graph/: __init__.py  classify.py  loop.py  nodes.py  router.py  run.py  state.py
copilot/ingest/: __init__.py  field_count.py  load.py  preflight.py  profile.py  xml_hardening.py
copilot/insight/: __init__.py  synthesize.py
copilot/intent/: __init__.py  understand.py
copilot/llm/: __init__.py  client.py
copilot/planning/: __init__.py  plan.py
copilot/rag/: __init__.py  recover.py
copilot/report/: __init__.py  assemble.py
copilot/sandbox/: __init__.py  ci_check.py  command.py  entrypoint.py  execute.py
tests/: test_ci_check.py  test_classify.py  test_codegen.py  test_execute.py  test_full_graph.py  test_graph_scaffold.py  test_insight.py  test_intent.py  test_planning.py  test_r11_field_count.py  test_r12_xml_hardening.py  test_rag_recovery.py  test_report.py  test_sandbox_command.py  test_self_heal_loop.py  test_walking_skeleton.py
week7_SambhavaJain/: .env.example  .gitignore  PROJECT_REPORT.md  README.md  app.py  requirements.txt
week7_SambhavaJain/.streamlit/: config.toml  secrets.toml.example
week7_SambhavaJain/rag/: __init__.py  config.py  embeddings.py  generator.py  ingest.py  pipeline.py  retriever.py  vectorstore.py
week7_SambhavaJain/sample_docs/: rag_overview.txt
week7_SambhavaJain/scripts/: capture_screenshots.py
week7_SambhavaJain/tests/: test_config.py  test_ingest.py  test_pipeline.py
